another z-index mobile fix

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -38,6 +38,7 @@ h1 {
     position: relative;
     h2 {
         text-align: end;
+        z-index: -10;
     }
     .rotateText {
         writing-mode: vertical-rl;
